<resources>
    <string name="app_name">ilddang</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="auth_num">인증번호</string>
    <string name="password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="confirm">확인</string>
    <string name="find_id_password_message">아이디/ 비밀번호 \n 둘 중 어떤것이 기억나지 않으세요? </string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="join">회원가입</string>
    <string name="notice_detail">공고 상세</string>
    <string name="no">아니요.</string>
    <string name="yes_cancel">네 취소할래요.</string>
    <string name="pd_people_number">%d명</string>
    <string name="view_more_image_num">더 보기 (+%d)</string>
    <string name="application_career">지원 경력</string>
    <string name="view_count">%d VIEW</string>
    <string name="wage">급여</string>
    <string name="request_job">구직신청</string>
    <string name="request_job_do">구직 신청하기</string>
    <string name="ask_chat">채팅문의</string>
    <string name="chat">채팅</string>
    <string name="ask_phone">전화문의</string>
    <string name="recruitment_completed">모집이 완료되었습니다.</string>
    <string name="job_cancel">구직 취소하기</string>
    <string name="request_complete">신청완료</string>
    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="career">경력</string>
    <string name="content_to_employer">구직 신청시 구인자에게 전달할 내용</string>
    <string name="input_message">보낼 메세지를 입력하세요.</string>
    <string name="app_notice">공지사항</string>
    <string name="one_on_one_ask">1:1문의</string>
    <string name="my_info">MY일땅</string>
    <string name="my_info_setting">MY일땅 설정</string>
    <string name="profile_hello">%s 님 \n 안녕하세요?</string>
    <string name="my_job_list">나의 구직 목록</string>
    <string name="my_job">나의 구직</string>
    <string name="my_ilddang_setting">MY일땅 설정</string>
    <string name="my_activity_score">내 활동 점수</string>
    <string name="my_job_to_see_list">리스트로 보기</string>
    <string name="my_job_to_see_calendar">달력으로 보기</string>
    <string name="push_notification">푸시알림</string>
    <string name="search_area">검색지역</string>
    <string name="auto_login">자동로그인</string>
    <string name="member_exit">회원 탈퇴하기</string>
    <string name="change_phone_number">휴대폰 번호 변경</string>
    <string name="switch_on">켜짐</string>
    <string name="switch_off">꺼짐</string>

</resources>