<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize">

    <include
        android:id="@+id/notice_item"
        layout="@layout/notice_list_item"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/notice_detail_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/notice_item"
        android:layout_marginTop="4dp"
        android:weightSum="2"
        android:gravity="center_vertical"
        android:background="@color/base_white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                style="@style/RobotoMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="@color/base_black"
                android:text="@string/application_career"/>

            <TextView
                android:id="@+id/career"
                style="@style/RobotoRegular"
                android:textSize="18dp"
                android:textColor="@color/base_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                style="@style/RobotoMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="@color/base_black"
                android:text="@string/wage"/>

            <TextView
                android:id="@+id/wage"
                style="@style/RobotoRegular"
                android:textSize="18dp"
                android:textColor="@color/base_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/request_job_do_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/colorPrimary"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/base_white"
        android:textSize="20dp"
        android:text="@string/request_job_do"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/request_job_do_button"
        android:layout_below="@+id/notice_detail_info"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/base_white"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/career_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:textAlignment="gravity"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/content_to_employer"/>
    </LinearLayout>
</RelativeLayout>