<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="150dp">

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:background="@drawable/circle_profile_background"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="@color/base_black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/profile_layout">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="@color/base_light_grey"/>

        <RelativeLayout
            android:id="@+id/push_notification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20dp"
                android:text="@string/push_notification"
                android:textColor="@color/base_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/switch_push_notification_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/base_white"
                    android:padding="3dp"
                    android:text="@string/switch_on"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_push_notofication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    app:trackTint="@drawable/switch_track_selector"
                    app:thumbTint="@drawable/switch_thumb_selector"/>
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/base_light_grey"/>

        <RelativeLayout
            android:id="@+id/search_area_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20dp"
                android:text="@string/search_area"
                android:textColor="@color/base_black"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:scaleX="-1"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/base_light_grey"/>

        <RelativeLayout
            android:id="@+id/auto_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_alignParentStart="true"
                android:textSize="20dp"
                android:text="@string/auto_login"
                android:textColor="@color/base_black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/switch_auto_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:textColor="@color/base_white"
                    android:text="@string/switch_on"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="20dp"
                    app:trackTint="@drawable/switch_track_selector"
                    app:thumbTint="@drawable/switch_thumb_selector"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/change_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@+id/member_exit"
        android:onClick="onButtonClick"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/base_green"
        android:textColor="@color/base_white"
        android:textSize="20dp"
        android:text="@string/change_phone_number"/>

    <Button
        android:id="@+id/member_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:onClick="onButtonClick"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/base_grey"
        android:textColor="@color/base_white"
        android:textSize="20dp"
        android:text="@string/member_exit"/>
</RelativeLayout>