<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?android:attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/notice_item"
            layout="@layout/notice_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:weightSum="2"
            android:gravity="center_vertical"
            android:background="@color/base_white"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/base_black"
                    android:text="@string/application_career"/>

                <TextView
                    android:id="@+id/career"
                    style="@style/RobotoRegular"
                    android:textSize="18dp"
                    android:textColor="@color/base_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    style="@style/RobotoMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/base_black"
                    android:text="@string/wage"/>

                <TextView
                    android:id="@+id/wage"
                    style="@style/RobotoRegular"
                    android:textSize="18dp"
                    android:textColor="@color/base_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/base_white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/pin_icon"/>

            <TextView
                android:id="@+id/address"
                style="@style/RobotoRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/location_image"
                android:textSize="17dp"
                android:textColor="@color/base_black" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/first_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/sample_image_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/second_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/sample_image_2"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/third_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sample_image_3"/>

                <View
                    android:id="@+id/overlay_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/image_alpha_color"/>

                <TextView
                    android:id="@+id/view_more_image_num"
                    style="@style/RobotoRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/base_white"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_description"
            style="@style/RobotoRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:textColor="@color/base_black"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/recruiting_completed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/base_grey"
            android:gravity="center"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/base_white"
            android:text="@string/recruitment_completed"/>

        <TextView
            android:id="@+id/cancel_job"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_bg"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/base_white"
            android:text="@string/job_cancel"/>

        <LinearLayout
            android:id="@+id/request_job_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/request_job_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/colorPrimary">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/chat_bubble"
                    app:tint="@color/base_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/base_white"
                    android:text="@string/request_job"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ask_chat_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/base_yellow">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/chat_bubble"
                    app:tint="@color/base_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/base_white"
                    android:text="@string/ask_chat"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ask_phone_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/rounded_bg"
                android:backgroundTint="@color/base_green">

            <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/chat_bubble"
                    app:tint="@color/base_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/base_white"
                    android:text="@string/ask_phone"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>